--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,14 @@
-name: CI
+name: CI-workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
+    paths:
+      - "app/**"
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+    paths:
+      - "app/**"
 
 permissions:
   contents: write
@@ -14,29 +18,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest
-    - name: Test application
-      run: pytest tests/test_app.py
-    - name: Build and push Docker image
-      if: success()
-      env:
-        REGISTRY: ghcr.io
-        IMAGE_NAME: ${{ github.repository }}-flaskapp
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        EVENT_NAME: ${{ github.event_name }}
-        BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-        SHORT_SHA: ${{ github.sha }}
-      run: |
-        docker login $REGISTRY -u ${{ github.repository_owner }} -p "$GITHUB_TOKEN"
-        TAG_NAME=$(echo "$EVENT_NAME-$BRANCH_NAME-$SHORT_SHA" | sed 's/\//-/g')  # 例: push-main-asdfgh...
-        docker build -t $REGISTRY/$IMAGE_NAME:$TAG_NAME .
-        docker push $REGISTRY/$IMAGE_NAME:$TAG_NAME
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        working-directory: ./app
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Test application
+        working-directory: ./app
+        run: pytest tests/test_app.py
+
+      - name: Build and push Docker image
+        if: success()
+        env:
+          REGISTRY: ghcr.io
+          IMAGE_NAME: ${{ github.repository }}-flaskapp
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          EVENT_NAME: ${{ github.event_name }}
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+          SHORT_SHA: ${{ github.sha }}
+        working-directory: ./app
+        run: |
+          docker login $REGISTRY -u ${{ github.repository_owner }} -p "$GITHUB_TOKEN"
+          TAG_NAME=$(echo "$EVENT_NAME-$BRANCH_NAME-$SHORT_SHA" | sed 's/\//-/g')  # 例: push-main-asdfgh...
+          docker build -t $REGISTRY/$IMAGE_NAME:$TAG_NAME .
+          docker push $REGISTRY/$IMAGE_NAME:$TAG_NAME
